@@ -8,6 +8,11 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+SH-2011-05-25-0: Bugfix:      Read from stderr even if stdout is already closed
+                              (IJS)
+                 Issue:       GE-3190
+                 Review:      SH
+
 HP-2011-05-25-0: Bugfix:      on Windows, the loadcheck.exe binary output
                               misses a line break
                  Issue:       GE-3503
